# bruteforce_canvas

./: .gitignore  .hfignore  DESIGN.md  LICENSE  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: SPEC_COMPLIANCE.md
specs/: 00-bruteforce-canvas_MASTER_SPEC.md  01-bruteforce-canvas_DAG_prompt.md  02-bruteforce-canvas_LHS_enum_router.md  03-bruteforce-canvas_fast_image_generation.md  04-bruteforce-canvas_Evaluator_pipeline.md  05-bruteforce-canvas_Orchestration.md  06-bruteforce-canvas_UI_UX.md
src/bruteforce_canvas/: __init__.py  actions.py  app_config.py  app_controller.py  app_factory.py  asr.py  balancer.py  cli.py  gates.py  (+35 more)
tests/: test_a11y.py  test_action_planner.py  test_adapter_contracts.py  test_app_config.py  test_app_controller.py  test_app_factory.py  test_asr.py  test_balancer.py  test_batch_evaluator.py  test_bonsai_adapter.py  test_canonicalizers.py  test_cli_entrypoint.py  test_combo_gp.py  test_compatibility_matrix.py  test_compatibility_pairs.py  test_e2e_real_adapters.py  test_evaluation.py  test_evaluator_target_policy.py  test_event_bus.py  test_feedback_policy.py  test_generation_runtime.py  test_generator_registry.py  test_gradio_ui.py  test_hardware_scheduler.py  test_in_memory_runner.py  test_learning_policy.py  test_llm_adapters.py  test_llm_clients.py  test_llm_lane_adapters.py  test_lock_config.py  test_loop_controller.py  test_loop_integration.py  test_ml_dependencies.py  test_ood_detection.py  test_orchestration_ui_boundaries.py  test_persistence_contract.py  test_persistent_worker.py  test_prompt_contracts.py  test_prompt_enums.py  test_prompt_lanes.py  (+23 more)
