[project]
name = "bruteforce-canvas"
version = "0.1.0"
description = "Greenfield TDD implementation of the Bruteforce Canvas PRD contracts"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13",
]

[project.optional-dependencies]
ml = [
  "torch>=2.0",
  "transformers>=4.40",
  "safetensors>=0.4",
  "accelerate>=0.25",
  "sentencepiece>=0.1.99",
  "protobuf>=3.20",
  "pillow>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
